--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://nabil-deve.github.io/Self-Care-Center",
   "name": "self-care-center",
   "version": "0.1.0",
   "private": true,
